# util-pdf

./: .gitignore  README.md  pyproject.toml
src/util_pdf/: cli.py  shell.py
src/util_pdf/operations/: convert.py  errors.py  merge.py  remove_pages.py  service.py
tests/: test_convert.py  test_merge.py  test_remove_pages.py  test_service.py
