[project]
name = "util-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Giancarlo", email = "giancarlo.poemape@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "prompt-toolkit>=3.0.0",
    "pypdf>=6.12.2",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
util-pdf = "util_pdf.cli:app"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
